# SmartSecuritySystem

./: .gitignore  README.md
AWSDynamoDBPut/: CMakeLists.txt  main.cpp
AWSS3Put/: CMakeLists.txt  S3_EXPORTS.h  main.cpp  s3_examples.h
Mbed/: .hg_archival.txt  main.cpp  mpr121.cpp  mpr121.h  rgb.h
MotionDetection/MotionVideoCapture/: CMakeLists.txt  main.cpp
MotionDetection/MotionVideoCapture/include/: camLib.cpp  camLib.hpp
SerialWithMbed/: serialTest.cpp
flask-app/: app.py
flask-app/templates/: login.html  unlock_events.html  video_events.html
